[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vias"
version = "0.1.2"
dependencies = [
    "pytest==8.3.3",
    "PyYAML==6.0.1",
    "numpy==1.26.4",
    "dotmap==1.3.30",
    "matplotlib==3.9.2",
    "pandas==2.2.2",
    "igraph==0.11.6",
    "scipy==1.12.0",
    "pyproj==3.6.1",
    "plotly==5.24.1",
    "geomdl==5.3.1",
    "osmread @ git+https://github.com/dezhin/osmread.git@d8d3fe5edd15fdab9526ea7a100ee6c796315663",
    "scikit-learn==1.5.1",
    "rich==13.7.1",
    "ruff==0.8.3",
    "mypy==1.13.0",
    "shapely==2.0.5",
    "affine==2.3.0",
    "rasterio==1.3.10",
    "kaleido==0.2.1",
    "scikit-image==0.24.0",
    "pymoo==0.6.1.3",
    "deap @ git+https://github.com/NikHoh/deap.git"
]
requires-python = ">=3.11.9"
authors = [
  {name = "Nikolas Hohmann", email = "nikhoh@web.de"},
]
maintainers = [
  {name = "Nikolas Hohmann", email = "nikhoh@web.de"}
]
description = "Multi-objective path planning framework to optimize Versatile Intelligent Aerial Streets (VIAS) for urban air mobility"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["path planning", "multi-objective", "optimization", "urban air mobility", "aerial corridors"]
classifiers = [
  "License :: BSD-3-Clause license",
    "Operating System :: OS Independent",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/NikHoh/VIAS"
"Bug Tracker" = "https://github.com/NikHoh/VIAS/issues"
Changelog = "https://github.com/NikHoh/VIAS/blob/master/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"vias" = ["py.typed"]

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["SIM108",
          "SIM102",
          "SIM105"]


